tests/NormalTests/paczka1/small_fuzzy/77626395.err
Error in line 8: BdB6vZJ S630 74,4
Error in line 6: v5oTpx A803 84,5
Error in line 9: AW7h46q S391 90,4
